Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7.1rc
  Bugs fixed
    - [ 2488 ] Always join on subprocess coupler threads
    - [ 2480 ] Repeating from <javapackage> import <class> results in reload
    - [ 2472 ] Importing simplejson fails with: 'NoneType' object has no
               attribute 'encode_basestring_ascii'
    - [ 2471 ] Jython is using netty channel future incorrectly
    - [ 2470 ] Jython leaks sockets in select reactor
    - [ 2469 ] Embedded BouncyCastle provider does not validate properly
    - [ 2460 ] Wrong result when multiplying complex numbers involving infinity
    - [ 2454 ] Security Vulnerability in Jython
    - [ 2442 ] Overriding __len__, __iter__, and __getitem__ in a tuple subclass
               causes an infinite recursion
    - [ 2112 ] time.strptime() has different default year in Jython and CPython
    - [ 1767 ] Rich comparisons
    - [ 2314 ] Failures in test_shutil on Windows
    - [ 2443 ] java.util.Map derived classes lack iterkeys, itervalues methods

  New Features
    - Added uname function to posix module. The mostly Java-based implementation even
      works to some extend on non-posix systems. Additional tweaks extend this to full
      featured uname-functionality on Windows systems (usable via os.uname()).
    - Buffer API changes allow java.nio.ByteBuffer to provide the storage when a PyBuffer
      is exported. This is to support CPython extensions via JyNI, but has other uses too
      (including access to direct memory buffers from Python). There is no change at the
      Python level or for client code using PyBuffer via the "fully encapsulated" API. It
      risks breaking code that makes direct access to a byte array via PyBuffer, implements
      the PyBuffer interface, or extends implementation classes in org.python.core.buffer.

Jython 2.7.1b3
  Bugs fixed
    - [ 550200 ] Jython does not work on ebcdic platforms